Updated k8s health checks to all services. Updated README.
